# keyviz

./: .gitignore  .metadata  LICENSE  README.md  README.zh-CN.md  README_zh-Hans.md  README_zh_CN.md  components.json  package-lock.json  package.json  pubspec.yaml  tsconfig.json  vite.config.ts
.github/: FUNDING.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: 1-bug_report.yml  2-feature_request.yml  bug_report.md
.github/workflows/: winget.yml
lib/: app.dart  key_listener.dart  main.dart
lib/animations/: backdrop.dart  fade.dart  grow.dart  slide.dart
lib/config/: assets.dart  config.dart  extensions.dart  style.dart  theme.dart
lib/data/: config.dart  keymaps.dart  properties.dart
lib/models/: raw_keyboard_data.dart
lib/providers/: config.dart  key_event.dart  key_event_data.dart  key_style.dart  keyboard_event.dart  providers.dart
lib/views/: about_tab.dart  appearance_tab.dart  general_tab.dart  keycap_styler.dart  keycapture.dart  settings.dart  style_tab.dart
lib/widgets/: alignment_picker.dart  flat_keycap.dart  iso_keycap.dart  option_menu.dart  scale.dart  solid_keycap.dart  switch.dart  utils.dart  wrapper.dart
linux/: CMakeLists.txt  main.cc  my_application.cc
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
macos/: Podfile
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: MainFlutterWindow.swift
macos/Runner.xcodeproj/: project.pbxproj
src/: App.css  App.tsx  i18n.tsx
src-tauri/: 2  Cargo.toml  Info.plist  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/crates/rdev/: Cargo.toml  LICENSE  README.md  README.tpl
src-tauri/crates/rdev/examples/: channel.rs  codes_conv.rs  display.rs  grab.rs  keyboard_state.rs  keycode.rs  listen.rs  serialize.rs  simulate.rs  test.rs  tokio_channel.rs
src-tauri/crates/rdev/src/: codes_conv.rs  lib.rs  rdev.rs
src-tauri/crates/rdev/src/keycodes/: android.rs  chrome.rs  linux.rs  macos.rs  macos_virtual_keycodes.rs  mod.rs  usb_hid.rs  windows.rs
src-tauri/crates/rdev/src/linux/: common.rs  display.rs  grab.rs  keyboard.rs  listen.rs  mod.rs  simulate.rs
src-tauri/crates/rdev/src/macos/: common.rs  display.rs  grab.rs  keyboard.rs  listen.rs  mod.rs  simulate.rs
src-tauri/crates/rdev/src/windows/: common.rs  display.rs  grab.rs  keyboard.rs  listen.rs  mod.rs  simulate.rs
src-tauri/crates/rdev/tests/: grab.rs  keycode.rs  listen_and_simulate.rs
src-tauri/src/: event.rs  lib.rs  main.rs
src-tauri/src/app/: commands.rs  emitter.rs  event.rs  mod.rs  state.rs  window.rs
src-tauri/src/domain/: event.rs
src-tauri/src/platform/: mod.rs  windows.rs
src-tauri/src/platform/hid_listener/: mod.rs  windows.rs
src-tauri/src/platform/window_manager/: mod.rs  windows.rs
src/components/: custom-filter.tsx  key-overlay.tsx  keycap.tsx  mouse-indicator.tsx  mouse-overlay.tsx  overlay.tsx  shortcut-recorder.tsx  theme-mode-toggle.tsx  theme-provider.tsx
src/hooks/: store.ts  use-i18n.ts
src/i18n/: index.ts
src/lib/: keymaps.ts
src/pages/: mouse-overlay-page.tsx  settings.tsx  visualization.tsx
src/stores/: key_event.ts  key_style.ts  preferences.ts
src/types/: event.ts  key.ts  (+1 more)
test/: widget_test.dart
windows/: CMakeLists.txt
(+120 files in other folders)
